--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import groovy.json.JsonSlurper
 import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
-    id 'fabric-loom' version '1.7-SNAPSHOT'
+    id 'fabric-loom' version '+'
     id "de.undercouch.download" version "4.1.2"
     id 'maven-publish'
 }
@@ -10,7 +10,7 @@ plugins {
 version = project.mod_version
 group = project.maven_group
 
-String default_minecraft_version = "1.16.5"
+String default_minecraft_version = "1.19.2"
 Properties localProperties = new Properties()
 String minecraft_version
 if (project.rootProject.file('build.properties').exists()) {
@@ -104,7 +104,7 @@ tasks.withType(JavaCompile).configureEach {
 
 task setupFiles() {
     download {
-        src "https://github.com/jonafanho/Minecraft-Mappings/archive/refs/heads/1.${minecraft_main_version}${is_1_19_3 ? ".3" : ""}.zip"
+        src "https://bgithub.xyz/jonafanho/Minecraft-Mappings/archive/refs/heads/1.${minecraft_main_version}${is_1_19_3 ? ".3" : ""}.zip"
         dest "src/main/java/cn/zbx1425/resourcepackupdater/mappings/files.zip"
         overwrite true
     }
