--- a/build.gradle
+++ b/build.gradle
@@ -104,7 +104,7 @@ tasks.withType(JavaCompile).configureEach {
 
 task setupFiles() {
     download {
-        src "https://bgithub.xyz/jonafanho/Minecraft-Mappings/archive/refs/heads/1.${minecraft_main_version}${is_1_19_3 ? ".3" : ""}.zip"
+        src "https://github.com/jonafanho/Minecraft-Mappings/archive/refs/heads/1.${minecraft_main_version}${is_1_19_3 ? ".3" : ""}.zip"
         dest "src/main/java/cn/zbx1425/resourcepackupdater/mappings/files.zip"
         overwrite true
     }
