--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Fabric Artifacts
-          pattern: |
+          path: |
             build/libs/*.jar
-            !build/libs/*-sources.jar
-          merge-multiple: true
